--- a/themes/river/theme.toml
+++ b/themes/river/theme.toml
@@ -1,17 +1,17 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "TestTheme"
+name = "river"
 license = "MIT"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
-description = ""
+description = "自己用的简单 hugo 模板"
 homepage = "http://example.com/"
 tags = []
 features = []
 min_version = "0.41"
 
 [author]
-  name = ""
+  name = "Co1driver"
   homepage = ""
 
 # If porting an existing theme
