--- a/config.toml
+++ b/config.toml
@@ -12,3 +12,19 @@ googleAnalytics = "UA-117991024-1"
 disqusShortname = "coldriver"
 
 copyright = "Copyright 2014-{year}"
+
+[params]
+  enableGitalk = true
+
+[params.gitalk] 
+    clientID = "36c8fa6e09d08297a270" # Your client ID
+    clientSecret = "af0175944284956d288d14b389fbc89be8df7f1e" # Your client secret
+    repo = "chongg039.github.io" # The repo to store comments
+    owner = "chongg039" # Your GitHub ID
+    admin= "chongg039" # Required. Github repository owner and collaborators. (Users who having write access to this repository)
+    id= "location.pathname" # The unique id of the page.
+    labels= "gitalk" # Github issue labels. If you used to use Gitment, you can change it
+    perPage= 15 # Pagination size, with maximum 100.
+    pagerDirection= "last" # Comment sorting direction, available values are 'last' and 'first'.
+    createIssueManually= false # If it is 'false', it is auto to make a Github issue when the administrators login.
+    distractionFreeMode= false # Enable hot key (cmd|ctrl + enter) submit comment.
